--- a/src/app/components/main-card/main-card.component.scss
+++ b/src/app/components/main-card/main-card.component.scss
@@ -1,18 +1,13 @@
-//.card-bg{
-//  height: 500px;
-//  width: 100%;
-//  background-color: #D9D9D9;
-//}
 @media (max-width: 767px) {
   .row {
-    margin-bottom: 20px; /* Adjust the gap as needed */
+    margin-bottom: 20px;
   }
 
   .col-sm-12 {
-    margin-bottom: 40px; /* Adjust the gap as needed */
+    margin-bottom: 40px;
   }
 
   .col-md-6{
-    margin-bottom: 40px; /* Adjust the gap as needed */
+    margin-bottom: 40px;
   }
 }
